fix: Robust AI error handling - return explicit errors instead of empty lists & disable safety filters